tests/data/specs/invalid/multiple_errors.rflx
package Multiple_Errors is
   type INVALID is range 0 .. 2 ** 8 - 1 with Size => 8;
   type INVALID is range 0 .. 2 ** 8 - 1 with Size => 8;
   type INVALID is range 0 .. 2 ** 8 - 1 with Size => 8;
   type INVALID is range 0 .. 2 ** 8 - 1 with Size => 8;
   type INVALID is range 0 .. 2 ** 8 - 1 with Size => 8;
   type INVALID is range 0 .. 2 ** 8 - 1 with Size => 8;
   type INVALID is range 0 .. 2 ** 8 - 1 with Size => 8;
   type INVALID is range 0 .. 2 ** 8 - 1 with Size => 8;
   type INVALID is range 0 .. 2 ** 8 - 1 with Size => 8;
   type INVALID is range 0 .. 2 ** 8 - 1 with Size => 8;
end Multiple_Errors;
